--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/node-sass/bin/node-sass --source-map true --output-style compressed --output dist sass/progress.scss && ./node_modules/rollup/bin/rollup -c rollup.config.js"
+    "build": "make build"
   },
   "repository": {
     "type": "git",
