--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "circle-progress",
   "version": "2.0.0",
-  "description": "[Demo](http://marinewater.github.io/circle-progress/)",
+  "description": "[Demo](https://marinewater.github.io/circle-progress/demo.html)",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "make build"
